# msds

./: .gitignore  Cargo.toml  README.md  benchmark.py  dev.py  emsds.py  pyproject.toml
pysrc/msds/: __init__.py  starforce.py
src/: lib.rs  starforce_functions.rs  test.rs
